Bug fix: overflowing elements blocking scoring boxes IM-676

--- a/assess2/vue-src/src/assess2.css
+++ b/assess2/vue-src/src/assess2.css
@@ -303,7 +303,11 @@ input[type=text]:disabled, .mathquill-math-field.disabled {
 .questionpane {
   margin: 15px 15px;
   max-width: 700px;
-  overflow: visible;
+  overflow-x: visible;
+}
+.questionwrap {
+  position: relative;
+  overflow-y: hidden;
 }
 @media only screen and (max-width: 480px) {
   .questionpane {
